# Pro_Fitness

./: README.md
PRO_FITNESS/: SUMMARY.md  Schema.sql  db.py  logging.py  main.py  populate.py  pyproject.toml
PRO_FITNESS/chatbot/: streamlit.py  tools.py
PRO_FITNESS/chatbot/pages/: signup.py
PRO_FITNESS/gym-admin/: package-lock.json  package.json
PRO_FITNESS/gym-admin/.claude/: launch.json
PRO_FITNESS/gym-admin/public/: index.html
PRO_FITNESS/gym-admin/src/: AdminApp.css  App.css  App.js  ClientApp.css  LandingPage.css  SignIn.css  api.js  auth.js  bookingEvent.js  chatEvent.js  index.js  theme.css  timezone.js
PRO_FITNESS/gym-admin/src/components/: AdminApp.js  Chatbot.js  ClientApp.js  Dashboard.js  Header.js  LandingChatbot.js  LandingPage.js  Login.js  ProfileMenu.js  Register.js  ResetPassword.js  Schedule.js  TrainerApp.js  Trainers.js
PRO_FITNESS/gym-admin/src/components/admin/: AdminClients.js  AdminDashboard.js  AdminMemberships.js  AdminReports.js  AdminSchedule.js  AdminSidebar.js  AdminTrainers.js  SlideOver.js  icons.js
PRO_FITNESS/routes/: attendance.py  auth.py  auth_dependency.py  change_password.py  chat_api.py  membership.py  otp.py  sessions.py  trainer_availability.py  user_membership.py  users.py
gym-admin/: package-lock.json
gym-admin/public/: index.html
gym-admin/src/: App.js
gym-admin/src/components/: Clients.js  Modal.js
