[project]
name = "pro-fitness"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.129.0",
    "langchain>=1.2.10",
    "langchain-anthropic>=1.3.4",
    "langgraph>=1.0.10",
    "mysql-connector-python>=9.6.0",
    "requests>=2.32.5",
    "streamlit>=1.55.0",
]
